# mysqlConnPoll_CPP

./: .gitignore  CMakeLists.txt  README.md  test.cpp
poll/: CMakeLists.txt  config.json  conn.cpp  poll.cpp
